--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -787,3 +787,19 @@ config SPECULATIVE_PAGE_FAULT
 	 detected or because underlying PMD or PTE tables are not yet
 	 allocating, it is failing its processing and a classic page fault
 	 is then tried.
+
+config DIRTY_RATIO
+	int "Default dirty ratio for writeback"
+	default 5
+	help
+	  The percentage of memory which may be used for dirty pages before the
+	  kernel commits dirty data to disk when another process performs a
+	  write call.
+
+config DIRTY_BACKGROUND_RATIO
+	int "Default background dirty ratio for writeback"
+	default 2
+	help
+	  The percentage of memory which may be used for dirty pages before the
+	  kernel's background writeback threads start committing the dirty data
+	  to disk.
