--- a/arch/arm64/boot/dts/qcom/beryllium-p0-pinctrl.dtsi
+++ b/arch/arm64/boot/dts/qcom/beryllium-p0-pinctrl.dtsi
@@ -581,6 +581,7 @@
 				pins = "gpio6", "gpio10";
 				drive-strength = <2>;  /* 2 mA */
 				bias-pull-down;  /* PULL DOWN */
+				output-low;
 			};
 		};
 	};
