--- a/arch/arm64/boot/dts/qcom/dipper-p0.dtsi
+++ b/arch/arm64/boot/dts/qcom/dipper-p0.dtsi
@@ -505,10 +505,12 @@
 //		fts,y-offset = <300>;
 //		fts,y-skip = <240>;
 		fts,config-array-size = <1>;
+		fts,dump-click-count;
 		fts,cfg_0 {
 			fts,tp-vendor = <0x48>;
 			fts,fw-name = "st_fts_e1.ftb";
 			fts,limit-name = "stm_fts_production_limits.csv";
+			fts,clicknum-file-name = "fts+sdc";
 		};
 	};
 	atmel_mxt_ts_640u@4a {
@@ -535,7 +537,7 @@
 		atmel,no-keys;
 		atmel,use-ta-gpio;
 		atmel,raw-min = <3000>;
-		atmel,raw-max = <7500>;
+		atmel,raw-max = <7000>;
 		atmel,cfg_1 {
 			atmel,family-id = <0xA6>;
 			atmel,variant-id = <0x14>;
