arm64: fix if disabled erratum 843419 in config

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -29,6 +29,7 @@ $(warning ld does not support --fix-cortex-a53-843419; kernel may be susceptible
     ifeq ($(call gold-ifversion, -lt, 114000000, y), y)
 $(warning This version of GNU gold may generate incorrect code with --fix-cortex-a53-843419;\
 	see https://sourceware.org/bugzilla/show_bug.cgi?id=21491)
+LDFLAGS_vmlinux	+= --no-fix-cortex-a53-843419
     endif
 LDFLAGS_vmlinux	+= --fix-cortex-a53-843419
   endif
